# powerlaw

./: .env.example  .gitignore  README.md  alembic.ini  arch.md  docker-compose.yml  pyproject.toml  q.txt
.agent/: agent.md
data/exhibits/: ex10-7.txt  ex10-8.txt  ex23-1.txt  ex4-2.txt
frontend/: package-lock.json  package.json
frontend/src/app/: actions.ts  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: audit-log.tsx  condition-action-control.tsx  empty-state.tsx  (+9 more)
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_project_deleted_at.py
plugin/: README.md  commands.html  manifest.xml  package.json  taskpane.html
plugin/certs/: localhost-key.pem  localhost.pem
plugin/scripts/: dev-server.mjs
plugin/src/: styles.css  taskpane.js
src/powerlaw/: __init__.py  config.py  db.py  logging.py  main.py  seed.py  worker.py
storage/1caea91c-22b6-4ad1-8b00-f2234ef54a85/: a855223c-f220-495c-8158-685973d849db.txt
storage/1d700ad0-3ced-40df-b532-fb0e531cdcb0/: 00098c67-f58f-4c04-b0eb-c89cd4d5b04b.txt  1d77494c-e529-4522-9f5d-358d2d84aa29.txt  3008369a-1488-42f3-9664-4a4a7513ef75.txt
storage/6b5d2e62-aa58-44b6-8874-05185e8512aa/: c2a11dd2-87bc-4afe-b054-0c9cc5d31bfb.txt  cb29ee0a-e070-4f29-9938-60569d50cab0.txt
storage/709ea66b-37c2-4054-8822-657bc4b00e2a/: 0ff44787-c3a4-41f9-adbc-46eb2bd0a38f.txt
storage/c6deb4ae-9c71-44bb-aebc-f628a2276fb1/: 891c0cd8-5134-4100-909b-f5ec49faa173.txt  f4795253-a9ac-4142-8f4c-113b3876ed63.txt
tests/: test_copilot_api.py  test_linking.py  test_segmentation.py
(+30 files in other folders)
