[project]
name = "powerlaw"
version = "0.1.0"
description = "Layer 1 backend for provenance-anchored project-finance deal graphs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "aiopg>=1.4.0",
  "openai>=1.109.0",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "lxml>=5.3.0",
  "pgvector>=0.3.6",
  "procrastinate>=2.9.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "pymupdf>=1.24.10",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9",
  "sqlalchemy[asyncio]>=2.0.35",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
  "pyright>=1.1.384",
]

[project.scripts]
powerlaw-seed = "powerlaw.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/powerlaw"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
